# nonsense

./: .gitmodules  CMakeLists.txt  bitonic.cu  csr.cu  dichotomy-roots.cpp  dichotomy.cpp  dot-product.cu  gnuplot-helpers.h  golden.cpp  gradient-descent.cpp  math.h  newton1d.cpp  newton2d.cpp  parabola.cpp  pardereq.cpp  penalty.cpp  polyline.cpp  runge-kutta.cpp  shooting.cpp  tridiag.cpp
